...
                            dailyFeedsViewModel.deleteFeed(feed.id)
                        }
                    }
                }
                .accessibilityIdentifier("DailyFeedsListView_ConfirmationDialog_YesButton")
            }
            .accessibilityIdentifier("DailyFeedsListView_List")
            .navigationTitle("Daily Feeds")
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button {
                        showingAddScreen.toggle()
                    } label: {
...
