...
                            eventsViewModel.deleteEvent(event.id)
                        }
                    }
                }
                .accessibilityIdentifier("EventsListView_ConfirmationDialog_YesButton")
            }
            .accessibilityIdentifier("EventsListView_List")
            .navigationTitle("Events")
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button {
                        isPresented.toggle()
                    } label: {
                        Label("Add Event", systemImage: "plus.circle.fill")
...
